change goals background color

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -29,7 +29,7 @@ input.btn {
   cursor: pointer;
 }
 .life-container {
-  background: #ffc952;
+  background: #34314c;
   padding: .5em;
   font-weight: bold;
   cursor: pointer;
